<resources>
    <string name="app_name">Comic_app</string>
    <string name="author">Tác giả</string>
    <string name="ark_num">Số chương</string>
    <string name="status">Trạng thái</string>
    <string name="view">Lượt xem</string>
    <string name="nextC">Chương sau</string>
    <string name="preC">Chương trước</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="uName">Tên: </string>
    <string name="uNumFav">Số truyện yêu thích: </string>
    <string name="uEmail">Email: </string>
    <string name="hi_y_n">Hi! Yến</string>
    <string name="buttoncat1">Action</string>
    <string name="buttoncat2">Action</string>
    <string name="buttoncat3">Action</string>
    <string name="textview">TextView</string>
    <string-array name="books">
        <item>"The Da Vinci Code"</item>
        <item>"The Girl On The Train"</item>
        <item>"Harry Potter"</item>
        <item>"Hunger Games"</item>
        <item>"Lord of the Rings"</item>
        <item>"Moby Dick"</item>
        <item>"To Kill a Mockingbird"</item>
        <item>"The Godfather"</item>
    </string-array>

    <string-array name="authors">
        <item>Dan Brown</item>
        <item>Paula Hawkins</item>
        <item>J. K. Rowling</item>
        <item>Suzanne Collins</item>
        <item>J. R. R. Tolkien</item>
        <item>Herman Melville</item>
        <item>Harper Lee</item>
        <item>Mario Puzo</item>
    </string-array>
</resources>