<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- profile picture -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_margin="30dp"
                android:background="@drawable/border_radius"
                app:srcCompat="@drawable/ic_baseline_profile"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:baselineAligned="true"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uName"
                    android:layout_marginBottom="10dp"
                    android:textSize="26sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/uPhone"
                    android:textSize="26sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/uEmail"
                    android:textSize="26sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/uNumFav"
                    android:textSize="26sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:baselineAligned="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">

                <TextView
                    android:id="@+id/txt_u_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sample Name"
                    android:layout_marginBottom="10dp"
                    android:textSize="26sp"/>
                <TextView
                    android:id="@+id/txt_u_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="55316889765"
                    android:layout_marginBottom="10dp"
                    android:textSize="26sp"/>
                <TextView
                    android:id="@+id/txt_u_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="sample@gmail.com"
                    android:layout_marginBottom="10dp"
                    android:textSize="26sp"/>
                <TextView
                    android:id="@+id/txt_u_num_fav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5561615315"
                    android:layout_marginBottom="10dp"
                    android:textSize="26sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="30dp">


            <Button
                android:id="@+id/btn_move_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favorite List"
                android:textSize="26sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_baseline_favorite"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                app:backgroundTint="@null"
                android:background="@drawable/main_button_shape"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>